# pyurr

./: pyproject.toml
src/pyurr/: __init__.py  main.py
