[project]
name = "pyurr"
version = "0.1.0"
description = ":3"
readme = "README.md"
authors = [
    { name = "Renowned", email = "64113367+RenownItAll@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = ["psutil", "typer", "rich"]

[project.scripts]
pyurr = "pyurr:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
